Proyecto2/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: so1-proyecto2
spec: {}
status: {}
