Proyecto2/kubernetes/agronomy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agronomy-deployment
  namespace: so1-proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agronomy-app
  template:
    metadata:
      labels:
        app: agronomy-app
    spec:
      containers:
      - name: agronomy-app-container
        image: jajsivianc/go-agronomy:1.0.7
        ports:
        - containerPort: 8080  # El puerto que tu aplicación en Go escucha
        resources:
          limits:
            cpu: "0.25"
            memory: "50Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: agronomy-service
  namespace: so1-proyecto2 
spec:
  selector:
    app: agronomy-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
