Proyecto2/kubernetes/athletics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: athletics-app
  namespace: so1-proyecto2
spec:
  selector:
    matchLabels:
      app: athletics-app
  template:
    metadata:
      labels:
        app: athletics-app
    spec:
      containers:
      - name: athletics-app
        image: jajsivianc/athletics:1.0.6
        resources:
          limits:
            memory: "120Mi"
            cpu: "0.3"
        ports:
        - containerPort: 50051

---

apiVersion: v1
kind: Service
metadata:
  name: athletics-service
  namespace: so1-proyecto2
spec:
  selector:
    app: athletics-app
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051
  type: ClusterIP
