Proyecto2/kubernetes/boxing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boxing-deployment
  namespace: so1-proyecto2
spec:
  selector:
    matchLabels:
      app: boxing-app
  template:
    metadata:
      labels:
        app: boxing-app
    spec:
      containers:
      - name: boxing-app
        image: jajsivianc/boxing:1.0.1
        resources:
          limits:
            memory: "120Mi"
            cpu: "0.2"
        ports:
        - containerPort: 50051

---

apiVersion: v1
kind: Service
metadata:
  name: boxing-service
  namespace: so1-proyecto2
spec:
  selector:
    app: boxing-app
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051
  type: ClusterIP
