Proyecto2/kubernetes/engineering.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engineering-deployment
  namespace: so1-proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engineering-app
  template:
    metadata:
      labels:
        app: engineering-app
    spec:
      containers:
      - name: engineering-app-container
        image: jajsivianc/rust-engineering:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.2"
            memory: "40Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: engineering-service #DNS
  namespace: so1-proyecto2
spec:
  selector:
    app: engineering-app
  ports:
    - protocol: TCP
      port: 8080  # Puerto accesible desde fuera del clúster
      targetPort: 8080  # Puerto donde la aplicación escucha en el contenedor
  type: ClusterIP  # Tipo de servicio
