Proyecto2/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olimpiadas-ingress
  namespace: so1-proyecto2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: olimpiadas-usac.com
    http:
      paths:
      - path: /engineering
        pathType: Prefix
        backend:
          service:
            name: engineering-service
            port:
              number: 80
      - path: /agronomy
        pathType: Prefix
        backend:
          service:
            name: agronomy-service
            port:
              number: 80
