Proyecto2/kubernetes/locust-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olimpiadas-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: olimpiadas-usac.com
    http:
      paths:
      - path: /ingenieria
        pathType: Prefix
        backend:
          service:
            name: ingenieria-service
            port:
              number: 80
      - path: /agronomia
        pathType: Prefix
        backend:
          service:
            name: agronomia-service
            port:
              number: 80
